--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,7 @@ a{
   border: 1px solid #CCCCCC;
   border-radius: 3px;
   font-size: 16px;
+  line-height: 22px;
   background: #FFFFFF;
   box-shadow: inset 0px 1px 0px 0px #ECECEC;
 }
