--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,71 @@ table {
 	border-spacing: 0;
 }
 
+/* hamburger icon */
+.nav-ham{
+  width: 32px;
+  height: 32px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+.nav-ham span{
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: #fff;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+.nav-ham span:nth-child(1) {
+  top: 0px;
+}
+.nav-ham span:nth-child(2),.nav-ham span:nth-child(3) {
+  top: 12px;
+}
+.nav-ham span:nth-child(4) {
+  top: 24px;
+}
+.nav-ham.open span:nth-child(1) {
+  top: 12px;
+  width: 0%;
+  left: 50%;
+}
+.nav-ham.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.nav-ham.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.nav-ham.open span:nth-child(4) {
+  top: 9px;
+  width: 0%;
+  left: 50%;
+}
+
 /* written by olivialin21 */
 /* all */
 *,*::before,*::after{
@@ -97,6 +162,9 @@ a{
   font-weight: bold;
   line-height: 56px;
 }
+.nav-ham{
+  display: none;
+}
 .nav-list{
   display: flex;
   margin-left: auto;
@@ -119,6 +187,45 @@ a{
 }
 .nav-sublist a{
   line-height: 44px;
+}
+@media(max-width:768px){
+  .nav .width-limit{
+    padding: 0 10px;
+  }
+  .nav h1 a{
+    font-size: 18px;
+  }
+}
+@media(max-width:375px){
+  .nav-list {
+    flex-direction: column;
+    max-height: 0px;
+    position: fixed;
+    z-index: 99;
+    top: 56px;
+    left: 0;
+    right: 0;
+    background: #000;
+    transition: max-height 1s;
+    overflow: hidden;
+  }
+  .nav-list a{
+    line-height: 40px;
+  }
+  .nav-sublist{
+    position: relative;
+    padding-left: 24px;
+    text-align: left;
+  }
+  .nav-ham{
+    color: #fff;
+    display: block;
+    margin-left: auto;
+  }
+  /*jQ點擊後動態在 body 加上 class */
+  .show .nav-list{
+    max-height: 240px;
+  }
 }
 
 /* header */
@@ -231,8 +338,7 @@ a{
 
 /* footer */
 .footer{
-  min-height: 200px;
-  padding: 18px 42px;
+  padding: 20px 42px;
 }
 .footer .width-limit{
   display: flex;
@@ -275,7 +381,7 @@ a{
   transition: all 0.3s;
 }
 .footer-block-3 h1 a:hover{
-  color: #6a3826;
+  color: #a0644e;
 }
 .footer .fa{
   transition: all 0.3s;
