--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,8 @@ table {
 
 /* hamburger icon */
 .nav-ham{
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
   position: relative;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
@@ -85,13 +85,13 @@ table {
   top: 0px;
 }
 .nav-ham span:nth-child(2),.nav-ham span:nth-child(3) {
-  top: 12px;
+  top: 9px;
 }
 .nav-ham span:nth-child(4) {
-  top: 24px;
+  top: 18px;
 }
 .nav-ham.open span:nth-child(1) {
-  top: 12px;
+  top: 9px;
   width: 0%;
   left: 50%;
 }
@@ -196,7 +196,7 @@ a{
     font-size: 18px;
   }
 }
-@media(max-width:375px){
+@media(max-width:425px){
   .nav-list {
     flex-direction: column;
     max-height: 0px;
@@ -241,15 +241,16 @@ a{
   background-size: cover;
 }
 .slogan{
-  width: 460px;
-  height: 152px;
+  width: 100%;
+  max-width: 460px;
+  min-height: 152px;
   position: absolute;
   z-index: 9;
   top: 123px;
   left: 0;
   right: 0;
   margin: auto;
-  padding: 20px;
+  padding: 20px 6px;
   text-align: center;
   color: #fff;
   background-color: rgba(0,0,0,0.35);
@@ -261,6 +262,14 @@ a{
 }
 .slogan p{
   line-height: 21px;
+}
+@media(max-width:425px){
+  .header .width-limit{
+    background-image: url(../img/header_mobile.png);
+  }
+  .slogan{
+    width: calc(100% - 20px);
+  }
 }
 
 /* form */
@@ -337,11 +346,9 @@ a{
 }
 
 /* footer */
-.footer{
-  padding: 20px 42px;
-}
 .footer .width-limit{
   display: flex;
+  padding: 20px 42px;
 }
 .footer-block{
   max-width: 299px;
@@ -405,4 +412,25 @@ a{
 }
 .fa-facebook-square:hover{
   color: #1b356f;
+}
+@media(max-width:768px){
+  .footer .width-limit{
+    padding: 20px 10px;
+  }
+  .footer-block{
+    max-width: 233px;
+    margin-right: 20px;
+  }
+  .footer-block-3{
+    max-width: 245px;
+  }
+}
+@media(max-width:425px){
+  .footer .width-limit{
+    flex-direction: column;
+  }
+  .footer-block{
+    max-width: 100%;
+    margin: 0 0 30px 0;
+  }
 }
