--- a/css/register.css
+++ b/css/register.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0 30px 0;
+  padding: 50px 10px 30px 10px;
   text-align: center;
   color: #3D1101;
 }
@@ -69,4 +69,12 @@
 }
 .register-btn button{
   width: 125px;
+}
+@media(max-width:425px){
+  .register-form{
+    flex-direction: column;
+  }
+  .register-form-terms{
+    margin-bottom: 16px;
+  }
 }
