--- a/css/login.css
+++ b/css/login.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0 30px 0;
+  padding: 50px 10px 30px 10px;
   text-align: center;
   color: #3D1101;
 }
