--- a/css/order.css
+++ b/css/order.css
@@ -16,7 +16,7 @@
 .order-class img{
   width: 26px;
   height: 32px;
-  margin-right: 15px;
+  margin: 0 15px 0 8px;
 }
 .order-class h2{
   font-size: 20px;
@@ -38,6 +38,26 @@
   color: #fff;
   background-color: #3D1101;
 }
+@media(max-width:768px){
+  .order .width-limit{
+    padding: 50px 10px 0;
+  }
+  .order-class{
+    min-width: 200px;
+  }
+}
+@media(max-width:425px){
+  .order .width-limit{
+    flex-direction: column;
+  }
+  .order-class div{
+    margin-bottom: 12px;
+  }
+  .order-class{
+    min-width: 100%;
+    margin-bottom: 30px;
+  }
+}
 
 .order-title{
   display: flex;
@@ -47,7 +67,8 @@
 }
 .order-search{
   display: flex;
-  width: 460px;
+  width: 100%;
+  max-width: 460px;
   height: 32px;
 }
 .order-search input{
@@ -57,6 +78,9 @@
   font-size: 16px;
   color: #3D1101;
   background-color: #EFE9E7;
+}
+.order-search input:focus{
+  outline: none;
 }
 .order-search div{
   display: flex;
@@ -112,6 +136,21 @@
   height: 14px;
   margin-top: 8px;
   background-color: #3D1101;
+}
+@media(max-width:768px){
+  .order-title{
+    flex-direction: column-reverse;
+  }
+  .order-search{
+    max-width: 100%;
+  }
+  .order-cart{
+    margin-left: auto;
+    margin-bottom: 12px;
+  }
+  .order-cart .fa{
+    padding: 3px 12px;
+  }
 }
 
 .order-blocks{
@@ -182,7 +221,6 @@
   font-weight: bold;
   color: #fff;
   cursor: pointer;
-  transition: all 0.3s;
 }
 .order-img{
   width: 100%;
@@ -247,4 +285,9 @@
 }
 .order-btn i{
   margin-right: 9px;
+}
+@media(max-width:768px){
+  .order-block{
+    margin: 0 auto 30px auto;
+  }
 }
